Fixed 'More' button alignment
No longer gets cut off at certain resolutions.

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ http://cssdeck.com/labs/another-simple-css3-dropdown-menu
 #buttonright > ul {
   margin: 0;
   background-image: url(assets/ico-more.png);
-  background-size: cover;
+  background-size: contain;
   list-style: none;
 }
 #buttonright > ul li {
